--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,16 +1,16 @@
 /* Variables */
 :root {
-    --darker: #0e0f11;
-    --dark: #131417;
-    --light: #191a1e;
-    --lighter: #35373b;
-    --lightest: #2a2c32;
-    --primary: rgb(57, 99, 235);
-    --text: #aaabad;
-    --text-dimmed: #8a8a8b;
-    --green: #93e685;
-    --yellow: #eecd3d;
-    --red: #e64040;
+    --darker: #090a0e;
+    --dark: #10121a;
+    --light: #191c29;
+    --lighter: #282d42;
+    --lightest: #2f354e;
+    --primary: #5267bb;
+    --text: #c6cff3;
+    --text-dimmed: #a7afce;
+    --green: #befdb3;
+    --yellow: #f1e092;
+    --red: #ee9b9b;
 }
 
 /* Font */
